--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,5 @@ docs/notes/code/设计模式/.idea/
 docs/notes/code/网络编程/.idea/
 docs/notes/code/Socket网络编程/.idea/
 docs/notes/code/剑指Java面试/.idea/
-
+docs/notes/code/LeetCode题解/.idea/
 */.idea/*
