--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ docs/notes/code/Socket网络编程/.idea/
 docs/notes/code/剑指Java面试/.idea/
 docs/notes/code/LeetCode题解/.idea/
 */.idea/*
+docs/notes/code/Spring/.idea/
