--- a/.gitignore
+++ b/.gitignore
@@ -22,14 +22,8 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-
+# my ignore
 *.ini
 *.drawio
-docs/notes/code/剑指Offer题解/.idea/
-docs/notes/code/设计模式/.idea/
-docs/notes/code/网络编程/.idea/
-docs/notes/code/Socket网络编程/.idea/
-docs/notes/code/剑指Java面试/.idea/
-docs/notes/code/LeetCode题解/.idea/
-*/.idea/*
-docs/notes/code/Spring/.idea/
+*.iml
+*.idea/
